removed grid from layout of outreach section. still have some overlap issues, but they are centered throughout responsive resizing

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,5 +1,7 @@
 .card {
-  min-width: 30rem;
+  min-width: 20rem;
+  min-height: 20rem;
+  padding: 2rem;
 
   //Functionality
   perspective: 150rem;
@@ -153,4 +155,19 @@
       font-size: 6rem;
       font-weight: 100;
     }
+}
+
+.card-box {
+  padding: 2rem;
+  display: inline-block;
+  width: 25rem;
+  height: 25rem;
+  margin: 2rem auto 0;
+}
+
+@media only screen and(min-width: 62rem){
+  .card-box {
+    width: 30rem;
+    height: 30rem;
+  }
 }
