--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -12,6 +12,7 @@
 
   [class^="col-"] {   
     float: left;
+    min-width: 30rem;
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
